<resources>
    <string name="app_name">OPSCPOE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Not registered? Sign Up Here</string>
    <string name="prompt_name">Name</string>
    <string name="reg_btn_label">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_up_already">Already registered? Login here</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="unit">Choose preferred unit of measurement</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="api_key">AIzaSyDeDY7t3wXRNkD6_SL6qiRzruGZQybnm-U</string>
    
    <array name="modes">
        <item>Car</item>
        <item>Walk</item>
        <item>Public Transport</item>
    </array>

    <array name="units">
        <item>Imperial</item>
        <item>Metric</item>
    </array>

    <string name="user_collection">Users</string>
    <string name="user_locations">User Locations</string>
</resources>