<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/emailTV"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTV"
            android:id="@+id/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/passTV"
            android:textStyle="bold"
            android:layout_below="@+id/email_address"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passTV"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:layout_below="@+id/password"
            android:layout_marginTop="35dp"
            android:id="@+id/loginBtn"
            android:background="@drawable/button_selecter"
            android:textColor="@color/textColor"

            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/sign_up"

            />
    </RelativeLayout>

</LinearLayout>