<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/app_name"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="@color/textColor"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:textStyle="bold"-->
        <!--/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_name"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/prompt"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:id="@+id/reg_name"
            android:layout_below="@+id/prompt"
            android:inputType="textEmailAddress"
            />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/prompt1"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/reg_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:id="@+id/reg_email"
            android:layout_below="@+id/prompt1"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/prompt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/reg_email"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:id="@+id/reg_pass"
            android:layout_below="@+id/prompt2"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn_label"
            style="android:textAppearanceSmall"
            android:id="@+id/reg_btn"
            android:textColor="@color/textColor"
            android:layout_below="@id/reg_pass"
            android:background="@drawable/button_selecter"
            android:textStyle="bold"
            />
    </RelativeLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            >
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_already"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:id="@+id/sign_up_already"

                />
        </RelativeLayout>





</LinearLayout>