<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/unitTV"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        />

    <Spinner
        android:id="@+id/spinnerUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/units"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please choose your preferred mode of transport"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/modeTV"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        />

    <Spinner
        android:id="@+id/spinnerMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/modes"
        android:visibility="visible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_preferences"
        style="android:textAppearanceSmall"
        android:id="@+id/save_btn"
        android:textColor="@color/textColor"
        android:background="@drawable/button_selecter"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        />


</LinearLayout>